# zetteln

./: .env.example  .gitignore  Caddyfile  LICENSE  Makefile  README.md  cloud-init.yml  docker-compose.prod.yml  docker-compose.yml  test-http3.sh
.github/workflows/: docker-build.yml  rust-ci.yml
client/: Dockerfile  package.json  vite.config.ts
client/src/routes/: +page.svelte
server/: Cargo.toml  Dockerfile
server/src/: main.rs
